--- a/front/pasteleria2.0/src/scss/layout/_producto.scss
+++ b/front/pasteleria2.0/src/scss/layout/_producto.scss
@@ -4,7 +4,7 @@
     column-gap: 3rem;
     padding: 1rem;
     align-items: center;
-    .producto-imagen{
+    .imagen-producto{
         width: 20%;
         height: 20%;
     }
@@ -22,13 +22,8 @@
         justify-content: center;
         align-items: stretch;
         row-gap: 1rem;
-        .precio{
+        .precio-producto{
             margin: 0;
-        }
-        .cantidad{
-            background-color: $gris;
-            border: none;
-            padding: 2rem;
         }
         
     }
